[package]
name = "actix-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = ["mysql", "runtime-actix-rustls", "chrono", "uuid"] }
actix-identity = "0.5.2"
actix-session = {version="0.7.2",  features = [ "cookie-session" ]}
actix-web = "4.3.1"
askama = "0.12.0"
serde = "1.0.163"
uuid = {version="1.3.3", features=["v4", "fast-rng", "macro-diagnostics", "serde"]}
chrono = "0.4.26"
env_logger = "0.10.0"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
thiserror = "1.0.40"
bcrypt = "0.14.0"
